projeto 2 - verificando chute

--- a/LP-js/logica-js-projeto_2/index.html
+++ b/LP-js/logica-js-projeto_2/index.html
@@ -30,7 +30,7 @@
 					/>
 					<div class="chute container__botoes">
 						<button
-							onclick="verificarChute()"
+							onclick="checkGuess()"
 							class="container__botao"
 						>
 							Guess
