--- a/LP-js/logica-js-projeto_2/index.html
+++ b/LP-js/logica-js-projeto_2/index.html
@@ -36,7 +36,7 @@
 							Guess
 						</button>
 						<button
-							onclick=""
+							onclick="newGame()"
 							id="reiniciar"
 							class="container__botao"
 							disabled
